1998-11-14  Jim Kingdon

	* sanity.sh (conflicts2-142b7 through conflicts2-142b11): New
	tests; resurrecting doesn't work from one level up.

	* sanity.sh (mwrap-7): Remote prints the messages in a different
	order.

1998-11-13  Jim Kingdon

	* tag.c (check_fileproc): Log tag deletions.
	* rtag.c (check_fileproc): Likewise.
	* sanity.sh (taginfo-14 through taginfo-18): New tests, for
	these behaviors.

1998-11-12  Jim Kingdon

	* sanity.sh (mwrap-7): Update for the noexec fix.

	* server.c (server_copy_file): Add comment about noexec.

	* update.c (checkout_file): Handle noexec case involving revbuf
	and modes.
	(update_fileproc): In case T_NEEDS_MERGE, let merge_file take care
	of noexec, so it can tell the user if there would be conflicts.
	(merge_file): Print "conflicts found in FILE" message
	regardless of noexec.  Add comment about checking for whether the
	file already contained the changes, and noexec.
	* sanity.sh (conflicts-192a): New test, for this.

1998-10-20  Jim Kingdon

	Use the gzip library on the server.  Probably doesn't speed things
	up as currently implemented, but does avoid hassles in terms of
	finding an external gzip program.
	* zlib.c, server.h (gunzip_and_write, read_and_gzip): Now returns
	whether a fatal error occurred, rather than expecting error (1,
	...) to work.
	* client.c (update_entries, send_modified): Change callers.
	* server.c (receive_file): Rewrite gzip code to use
	gunzip_and_write rather than filter_through_gunzip.
	(server_updated): Likewise, use read_and_gzip rather than
	filter_through_gzip.
	* client.c, client.h (filter_through_gzip, filter_through_gunzip),
	run.c, cvs.h (filter_stream_through_program): Removed; no longer used.
	* sanity.sh (server): New tests server-4 and server-5 test
	this feature (note that CVS 1.10 also passes these tests; the
	behavior is supposed to be unchanged).

1998-10-19  Jim Kingdon

	* sanity.sh (multiroot3): New test, tests for a few more
	multiroot cases.
